--- a/StartGameActivity/res/layout/activity_gameplay.xml
+++ b/StartGameActivity/res/layout/activity_gameplay.xml
@@ -27,28 +27,44 @@
         android:inAnimation="@anim/slide_in_right"
         android:outAnimation="@anim/slide_out_left"
         >
-
-        <TextView
-            android:id="@+id/phrase_primary"
+		<RelativeLayout 
+		    android:id="@+id/verse_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+		    
+		 <TextView
+            android:id="@+id/verse_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_marginLeft="@dimen/card_margin"
             android:layout_marginRight="@dimen/card_margin"
             android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             />
 
         <TextView
-            android:id="@+id/phrase_secondary"
+            android:id="@+id/reference_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="right"
             android:layout_marginLeft="@dimen/card_margin"
             android:layout_marginRight="@dimen/card_margin"
             android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_below="@id/verse_text"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             />
+
+        <ImageView
+            android:id="@+id/directionImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentBottom="true"
+            android:background="#ffffff"
+            android:src="@drawable/swipe_up" />
+		    
+		</RelativeLayout>
+        
 
     </ViewFlipper>
 
